# rshttpserver-backend

./: .gitignore  Cargo.toml  README.md  main.http
src/: config.rs  error.rs  handlers.rs  main.rs  routers.rs  state.rs  utils.rs
templates/: index.html
